--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -44,7 +44,7 @@ jobs:
         run: flutter test
 
       - name: Build web
-        run: flutter build web --release --base-href "/${{ github.event.repository.name }}/"
+        run: flutter build web --release --base-href "/"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
